# SkillPilot

./: .env.example  CLAUDE.md  IMPORTERS.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  README_CN.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: import_skills.py
skillpilot/: __init__.py  main.py
skillpilot/api/: __init__.py
skillpilot/api/routes/: __init__.py  auth.py  orchestration.py  platform.py  skill.py  vector_search.py
skillpilot/core/: __init__.py  config.py
skillpilot/core/adapters/: __init__.py  base.py  coze.py  dify.py  langchain.py
skillpilot/core/importers/: __init__.py  base.py  coze.py  dify.py  gptstore.py  huggingface.py  registry.py
skillpilot/core/models/: __init__.py  auth.py  common.py  orchestration.py  skill.py  user.py
skillpilot/core/services/: __init__.py  ai_service.py  auth.py  embedding.py  orchestration.py  skill.py  vector_search.py
skillpilot/core/utils/: __init__.py  helpers.py  logger.py  validators.py
skillpilot/db/: __init__.py  seekdb.py
skillpilot/tests/integration/: test_api.py
skillpilot/tests/unit/: test_ai_service.py  test_auth.py  test_config.py  test_embedding.py  test_models.py  test_orchestration_service.py  test_platform_adapters.py  test_skill_service.py  test_vector_search.py
