[project]
name = "skillpilot"
version = "0.2.0"
description = "SkillPilot - AI Skill Orchestration Engine based on SeekDB with Vector Search and Multi-Platform Support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "wayyoungboy", email = "wayyoungboy@gmail.com" }
]
keywords = ["seekdb", "ai", "skill", "orchestration", "vector-search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "pyseekdb>=1.1.0",
    "email-validator>=2.1.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

# AI providers
ai-openai = [
    "openai>=1.10.0",
]

ai-anthropic = [
    "anthropic>=0.18.0",
]

# Local embedding model
ai-local = [
    "sentence-transformers>=2.3.0",
]

# All AI features
ai-all = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.3.0",
]

# Platform importers
import-coze = [
    "coze>=0.1.0",
]

import-dify = [
    "dify-client>=0.1.0",
]

import-huggingface = [
    "huggingface_hub>=0.20.0",
]

# All importers
import-all = [
    "coze>=0.1.0",
    "dify-client>=0.1.0",
    "huggingface_hub>=0.20.0",
]

# Complete installation with all features
all = [
    "skillpilot[ai-all,import-all]",
]

[project.urls]
Homepage = "https://github.com/wayyoungboy/SkillPilot"
Repository = "https://github.com/wayyoungboy/SkillPilot.git"
Issues = "https://github.com/wayyoungboy/SkillPilot/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skillpilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["skillpilot/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["skillpilot"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F811", "F401"]

[tool.coverage.run]
source = ["skillpilot"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
